animando papel de parede

--- a/bingo.html
+++ b/bingo.html
@@ -13,14 +13,12 @@
 </head>
 <body>
 
-    <h1 class="titulo-com-faixa">BINGO</h1>
+    <h1 class="titulo-bingo">BINGO DA GALERINHA</h1>
     <!--<div class="botao-sorteador">
         <button>Sortear Número</button>
     </div>
     -->
 <article class="container-tabela">
-
-        
 
     <table class= "tabela-bingo">
     <tr>
