--- a/bingo.html
+++ b/bingo.html
@@ -9,25 +9,49 @@
     <link rel="stylesheet" href="./style.css">
     <script src="script.js" defer></script>
   
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Playwrite+CA:wght@100..400&family=Playwrite+MX+Guides&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik+Distressed&family=Sigmar+One&family=Splash&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik+Distressed&family=Sigmar+One&family=Splash&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Rubik+Distressed&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik+Distressed&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik+Distressed&family=Sigmar+One&family=Splash&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <h1 class="bem-vindo"> Seja bem Vindo(a) ao</h1>
+    <h2 class="titulo-bingo">  BINGO DA <br> GALERINHA</h2>
 
-    <h1 class="titulo-bingo">BINGO DA GALERINHA</h1>
-    <!--<div class="botao-sorteador">
-        <button>Sortear Número</button>
-    </div>
-    -->
+
+    <button class="btnSortear">Sortear</button>
+      <h3 id="numeroSorteado" class="numeroSorteado"></h3>
+        <section class="sessaoNumeros">
+         <h2>Números sorteados</h2>
+        </section>
+
+
+
 <article class="container-tabela">
 
-    <table class= "tabela-bingo">
-    <tr>
-        <td>B</td>
-        <td>I</td>
-        <td>N</td>
-        <td>G</td>
-        <td>O</td>
-    </tr>
+    <table class="tabela-bingo">
+    <thead> <tr>
+            <th>B</th> 
+            <th>I</th>
+            <th>N</th>
+            <th>G</th>
+            <th>O</th>
+        </tr>
+    </thead>
+
+
+
     <tr>
         <td>1</td>
         <td>16</td>
