--- a/bingo.html
+++ b/bingo.html
@@ -8,32 +8,23 @@
     <!--Declaração do JavaScript-->
     <link rel="stylesheet" href="./style.css">
     <script src="script.js" defer></script>
-  
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Playwrite+CA:wght@100..400&family=Playwrite+MX+Guides&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik+Distressed&family=Sigmar+One&family=Splash&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik+Distressed&family=Sigmar+One&family=Splash&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Rubik+Distressed&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik+Distressed&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik+Distressed&family=Sigmar+One&family=Splash&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=DM+Serif+Display:ital@0;1&family=Lilita+One&family=Oleo+Script:wght@400;700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Oleo+Script:wght@400;700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Lilita+One&family=Oleo+Script:wght@400;700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Archivo+Black&family=DM+Serif+Display:ital@0;1&family=Lilita+One&family=Oleo+Script:wght@400;700&family=Roboto+Slab:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Archivo+Black&family=DM+Serif+Display:ital@0;1&family=Lilita+One&family=Oleo+Script:wght@400;700&family=Permanent+Marker&family=Roboto+Slab:wght@100..900&family=Rubik+Distressed&family=Rubik:ital,wght@0,300..900;1,300..900&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
-    <h1 class="bem-vindo"> Seja bem Vindo(a) ao</h1>
-    <h2 class="titulo-bingo">  BINGO DA <br> GALERINHA</h2>
+    <h1 class="bem-vindo"> Seja bem-Vindo(a) ao</h1>
+    <h2 class="bingoGalerinha"> Bingo da <br> Galerinha!!</h2>
 
 
-    <button class="btnSortear">Sortear</button>
+    <button class="btnSortear">SORTEAR</button>
       <h3 id="numeroSorteado" class="numeroSorteado"></h3>
         <section class="sessaoNumeros">
-         <h2>Números sorteados</h2>
+    <h2 class="numSorteado"> Número sorteado:</h2>
         </section>
 
 
